--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -47,6 +47,29 @@
     "phone": "Phone",
     "gender": "Gender",
     "nationality": "Nationality",
-    "selectdeparturearrival": "Please select departure and arrival"
+    "selectdeparturearrival": "Please select departure and arrival",
+    "goToLogin": "Go to Login",
+    "ticket_price": "Ticket Price",
+    "confirmed": "CONFIRMED",
+    "cancelled": "CANCELLED",
+    "profile": "Profile",
+    "forgetPasswordTitle": "Forget Password?",
+    "emailOrPhonePlaceholder": "Enter Email or Phone",
+    "resetPasswordButton": "Reset Password",
+    "forgotPasswordMessage": "Please enter your email or phone number to reset your password.",
+    "new_password": "New Password",
+    "create_new_password": "Create a new password",
+    "confirm_password": "Confirm Password",
+    "confirm": "Confirm",
+    "password_empty": "Please fill all fields",
+    "password_mismatch": "Passwords do not match"   ,
+    "otp_verification": "OTP Verification",
+    "check_email": "Check your email",
+    "enter_otp_code": "We sent a reset link to {email}. Enter the 6-digit code mentioned in the email.",
+    "invalid_otp": "Invalid OTP",
+    "valid_otp_prompt": "Please enter a valid 6-digit code",
+    "dont_receive_code": "Don’t receive code?",
+    "resend": "Re-send",
+    "reset_password": "Reset Password"
 
 }
