--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -70,6 +70,58 @@
     "valid_otp_prompt": "يرجى إدخال رمز مكون من 6 أرقام صالح",
     "dont_receive_code": "لم تستلم الرمز؟",
     "resend": "إعادة إرسال",
-    "reset_password": "إعادة تعيين كلمة المرور"
+    "reset_password": "إعادة تعيين كلمة المرور",
+    "myPoints": "نقاطي",
+    "currentPoints": "نقاطك الحالية",
+    "conversionOptions": "خيارات التحويل",
+    "noDataAvailable": "لا توجد بيانات متاحة",
+    "noConversionOptions": "لا توجد خيارات تحويل متاحة",
+    "selectCurrency": "اختر العملة",
+    "chooseCurrency": "اختر العملة",
+    "redeemMyPoints": "استبدال النقاط",
+    "currency": "العملة",
+    "pointsConversion": " نقاط ➜ ",
+    "successfulConversion": "تم تحويل النقاط بنجاح",
+    "private_booking": "حجز خاص",
+    "select_your_city": "من أي مدينة أنت؟",
+    "select_city_hint": "اختر مدينتك",
+    "address_from": "عنوان من",
+    "address_from_hint": "أدخل عنوانك",
+    "select_city_to": "إلى أي مدينة أنت؟",
+    "address_to": "عنوان إلى",
+    "address_to_hint": "أدخل وجهتك",
+    "select_car_brand": "اختر علامة السيارة",
+    "select_car_brand_hint": "اختر علامة السيارة",
+    "travelers_count": "عدد المسافرين",
+    "book_button": "احجز",
+    "booking_successful": "تم الحجز بنجاح!",
+    "booking_failed": "فشل الحجز. حاول مرة أخرى لاحقًا.",
+    "go_to_login": "الذهاب إلى تسجيل الدخول",
+    "failed_to_load_user_data": "فشل في تحميل بيانات المستخدم",
+    "edit_profile": "تعديل الملف الشخصي",
+    "language": "اللغة",
+    "arabic": "العربية",
+    "english": "الإنجليزية",
+    "enter_name": "أدخل اسمك",
+    "enter_email": "أدخل بريدك الإلكتروني",
+    "enter_phone": "أدخل رقم هاتفك",
+    "edit_profile_button": "تعديل الملف الشخصي",
+    "profile_updated": "تم تحديث الملف الشخصي بنجاح!",
+    "profile_update_failed": "فشل في تحديث الملف الشخصي.",
+    "wallet_recharge": "إعادة شحن المحفظة",
+    "enter_amount": "أدخل المبلغ",
+    "select_payment_method": "اختر طريقة الدفع",
+    "upload_image": "تحميل الصورة",
+    "no_image_selected": "لم يتم اختيار صورة",
+    "image_selected": "تم اختيار الصورة وتحويلها إلى Base64",
+    "submit_recharge": "إرسال إعادة الشحن",
+    "error_fill_fields": "يرجى ملء جميع الحقول وتحميل صورة",
+    "success_dialog_title": "تم",
+    "success_dialog_message": "تم إرسال طلب إعادة الشحن بنجاح.",
+    "error_message": "خطأ",
+    "wallet_screen_title": "المحفظة",
+    "user_balance": "رصيد المستخدم",
+    "transaction_history": "سجل المعاملات",
+    "no_transactions": "لا توجد معاملات متاحة."
   }
   
