--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -70,6 +70,57 @@
     "valid_otp_prompt": "Please enter a valid 6-digit code",
     "dont_receive_code": "Don’t receive code?",
     "resend": "Re-send",
-    "reset_password": "Reset Password"
+    "reset_password": "Reset Password",
+    "myPoints": "My Points",
+    "currentPoints": "Your Current Points",
+    "conversionOptions": "Conversion Options",
+    "noDataAvailable": "No data available",
+    "noConversionOptions": "No conversion options available",
+    "selectCurrency": "Select Currency",
+    "chooseCurrency": "Choose a currency",
+    "redeemMyPoints": "Redeem My Points",
+    "currency": "Currency",
+    "pointsConversion": " points ➜ ",
+    "successfulConversion": "Points converted successfully",
+    "private_booking": "Private Booking",
+    "select_your_city": "Which city are you from?",
+    "select_city_hint": "Select your city",
+    "address_from": "Address From",
+    "address_from_hint": "Enter your address",
+    "select_city_to": "Which city are you to?",
+    "address_to": "Address To",
+    "address_to_hint": "Enter your destination",
+    "select_car_brand": "Select Car Brand",
+    "select_car_brand_hint": "Select Car Brand",
+    "travelers_count": "Travelers Count",
+    "book_button": "Book",
+    "booking_successful": "Booking successful!",
+    "booking_failed": "Booking failed. Try again later.",
+    "failed_to_load_user_data": "Failed to load user data",
+    "language": "Language",
+    "arabic": "Arabic",
+    "english": "English",
+    "edit_profile": "Edit Profile",
+    "enter_name": "Enter your name",
+    "enter_email": "Enter your email",
+    "enter_phone": "Enter your phone",
+    "edit_profile_button": "Edit Profile",
+    "profile_updated": "Profile updated successfully!",
+    "profile_update_failed": "Failed to update profile.",
+    "wallet_recharge": "Wallet Recharge",
+    "enter_amount": "Enter Amount",
+    "select_payment_method": "Select Payment Method",
+    "upload_image": "Upload Image",
+    "no_image_selected": "No image selected",
+    "image_selected": "Image selected and converted to Base64",
+    "submit_recharge": "Submit Recharge",
+    "error_fill_fields": "Please fill all fields and upload an image",
+    "success_dialog_title": "Success",
+    "success_dialog_message": "Wallet recharge request submitted successfully.",
+    "error_message": "Error",
+    "wallet_screen_title": "Wallet",
+    "user_balance": "User Balance",
+    "transaction_history": "Transaction History",
+    "no_transactions": "No transactions available."
 
 }
