--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,6 +1,6 @@
 {
     "all" : "All",
-    "Hiace" : "Hiace",
+    "Hiace" : "mini-van",
     "Bus" : "Bus",
     "train" : "Train",
     "one_way" : "One-Way",
